--- a/src/globals.css
+++ b/src/globals.css
@@ -138,7 +138,7 @@
   }
 
   .common-container {
-    @apply flex flex-col flex-1 items-center gap-10 overflow-scroll py-10 px-5 md:px-8 lg:p-14 custom-scrollbar;
+    @apply flex flex-col flex-1 items-center gap-10 overflow-scroll mb-10 py-10 px-5 md:px-8 lg:p-14 custom-scrollbar;
   }
 
   /* All Users */
@@ -199,7 +199,7 @@
 
   /* Profile */
   .profile-container {
-    @apply flex flex-col items-center flex-1 gap-10 overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
+    @apply  flex flex-col items-center flex-1 gap-10 overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
   }
 
   .profile-inner_container {
@@ -248,7 +248,7 @@
 
   /* Left sidebar */
   .leftsidebar {
-    @apply hidden md:flex sticky left-0 px-6 py-10 flex-col justify-between min-w-[270px] bg-dark-2;
+    @apply sticky hidden md:flex left-0 overflow-hidden top-0 px-6 py-10 flex-col justify-between min-w-[270px] bg-dark-2;
   }
 
   .leftsidebar-link {
